--- a/package.json
+++ b/package.json
@@ -2,23 +2,29 @@
   "name": "uet",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.0",
     "@nghiavuive/uet-course": "^1.0.0",
-    "@types/cookie": "^0.6.0",
+    "@types/js-cookie": "^3.0.6",
+    "axios": "^1.7.7",
     "cookie": "^0.6.0",
     "googleapis": "^105.0.0",
-    "next": "14.2.13",
+    "js-cookie": "^3.0.5",
+    "next": "^14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
