--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
   },
