--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -32,6 +33,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
+    "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
