--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.0",
     "@nghiavuive/uet-course": "^1.0.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.7",
     "cookie": "^0.6.0",
+    "flowbite-react": "^0.10.1",
     "googleapis": "^105.0.0",
     "js-cookie": "^3.0.5",
     "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
   },
@@ -35,6 +38,7 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
