--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.0",
-    "@nghiavuive/uet-course": "^1.0.0",
+    "@nghiavuive/uet-course": "^1.0.3",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.7",
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
   },
