--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,7 +44,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/libs/socket/socket.ts"
+    "src/libs/socket/socket-client.ts"
   ],
   "exclude": [
     "node_modules"
