--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.0",
-    "@nghiavuive/uet-course": "^1.0.3",
+    "@nghiavuive/uet-course": "^1.0.4",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.7",
@@ -19,6 +19,7 @@
     "flowbite-react": "^0.10.1",
     "googleapis": "^105.0.0",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
