--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "Datepicker",
         "flowbite",
         "navlink",
+        "nghiavuive",
         "reduxjs",
         "toastify"
     ]
